front -fix menu select width
Was nearly half the page when label was too long

--- a/front/src/dashboard/DashboardMenu.scss
+++ b/front/src/dashboard/DashboardMenu.scss
@@ -13,6 +13,9 @@
     }
     & select {
       width: 100%;
+      @media (min-width: 749px) {
+        max-width: 200px;
+      }
     }
 
     p,
